JSON stringify object responses

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electrum-cli",
   "version": "0.1.0",
-  "description": "Quickly make requests to an Electrum servers in a simple CLI ",
+  "description": "Quickly make requests to an electrum server with a simple CLI",
   "repository": "git@github.com:rkalis/electrum-cli.git",
   "license": "MIT",
   "author": "Rosco Kalis <roscokalis@gmail.com>",
